--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-practice",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "./dist/main.js",
   "scripts": {
     "build": "tsc",
     "prestart": "npm run build",
