--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "sourceMap": true,
     "removeComments": true,
     "outDir": "./dist",
+    "strict": true,
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*"
