--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./dist/main.js",
   "scripts": {
-    "build": "tsc",
+    "build": "webpack",
     "prestart": "npm run build",
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,9 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^3.0.6",
-    "typescript": "^3.1.3"
+    "ts-loader": "^5.3.0",
+    "typescript": "^3.1.3",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   }
 }
