--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "removeComments": true,
     "outDir": "./dist",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "noImplicitAny": true,
   },
   "include": [
     "src/**/*"
