--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "incremental": true,
+    "target": "es5",
     "module": "commonjs",
+    "lib": [],
     "sourceMap": true,
     "removeComments": true,
-    "outDir": "./dist",
     "strict": true,
-    "esModuleInterop": true,
-    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "esModuleInterop": true
   },
-  "include": [
-    "src/**/*"
-  ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ]
 }
