--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,35 +1,22 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Debug Main Process",
-            "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
-            "windows": {
-                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
-            },
-            "cwd": "${workspaceRoot}",
-            "program": "${workspaceRoot}/dist/main.js",
-            "protocol": "inspector",
-            "sourceMaps": true,
-        },
-        {
-			"type": "chrome",
-			"request": "launch",
-			"name": "Debug Renderer Process",
-            "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
-            "windows": {
-                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
-            },
-            "runtimeArgs": [
-                "${workspaceRoot}/dist/main.js",
-                "--remote-debugging-port=9222"
-            ],
-			"webRoot": "${workspaceRoot}/"
-		}
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Debug Main Process",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
+      "windows": {
+        "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
+      },
+      "args": [
+        "dist"
+      ],
+      "outputCapture": "std",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+    }
+  ]
 }
