--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "incremental": true,
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "lib": [],
     "sourceMap": true,
     "removeComments": true,
@@ -11,6 +11,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "moduleResolution": "node",
     "esModuleInterop": true
   },
   "exclude": [
