--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "build",
+      "label": "build:dev",
       "type": "npm",
-      "script": "build",
+      "script": "build:dev",
       "group": "build",
       "problemMatcher": []
     }
