--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,11 +2,18 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "build",
+      "type": "npm",
+      "script": "build",
+      "group": "build",
+      "problemMatcher": []
+    },
+    {
       "label": "build:dev",
       "type": "npm",
       "script": "build:dev",
       "group": "build",
       "problemMatcher": []
-    }
+    },
   ]
 }
