--- a/.editorconfig
+++ b/.editorconfig
@@ -11,12 +11,12 @@ insert_final_newline = true
 
 # The JSON files contain newlines inconsistently
 [*.json]
-insert_final_newline = ignore
+insert_final_newline = false
 
 # Minified JavaScript files shouldn't be changed
 [**.min.js]
 indent_style = ignore
-insert_final_newline = ignore
+insert_final_newline = false
 
 [*.md]
 trim_trailing_whitespace = false
