--- a/package.json
+++ b/package.json
@@ -2,27 +2,36 @@
   "name": "electron-practice",
   "version": "1.0.0",
   "description": "This is a practice project.",
+  "main": "./main.js",
   "scripts": {
-    "build": "webpack --config ./config/webpack.config.prod.js",
+    "build": "node ./scripts/package.js && webpack --config ./config/webpack.config.prod.js",
     "start": "electron dist/prod",
-    "build:dev": "webpack --config ./config/webpack.config.dev.js",
+    "build:dev": "node ./scripts/package.js && webpack --config ./config/webpack.config.dev.js",
     "start:dev": "electron dist/dev",
-    "pack:l": "npm run build && electron-builder --l --config ./config/electron-builder.yml",
-    "pack:w": "npm run build && electron-builder --w --config ./config/electron-builder.yml",
+    "pack:l": "yarn build && electron-builder --l --config ./config/electron-builder.yml",
+    "pack:w": "yarn build && electron-builder --w --config ./config/electron-builder.yml",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "electron"
+  ],
   "author": "Kaz NAGAMINE",
   "license": "MIT",
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.1",
     "electron": "^7.1.7",
     "electron-builder": "^21.2.0",
+    "husky": "^4.0.9",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2",
     "webpack-obfuscator": "^0.21.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "node ./scripts/package.js && git add ./src/package.json"
+    }
   }
 }
