Output dependencies value to src/package.json

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "author": "Kaz NAGAMINE",
   "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.1",
     "electron": "^7.1.7",
