Save and restore the application settings

--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,8 @@
 {
   "name": "electron-practice",
   "version": "1.0.0",
-  "main": "./main.js"
+  "main": "./main.js",
+  "dependencies": {
+    "electron-store": "^5.1.0"
+  }
 }
