--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   ],
   "author": "Kaz NAGAMINE",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "electron-store": "^5.1.0"
+  },
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.1",
     "electron": "^7.1.7",
