--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "copy-webpack-plugin": "^5.1.1",
     "electron": "^7.1.7",
     "electron-builder": "^21.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
