--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,21 +2,43 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug Main Process",
       "type": "node",
       "request": "launch",
+      "name": "Electron: main",
       "cwd": "${workspaceFolder}",
+      "protocol": "inspector",
       "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
       "windows": {
         "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
       },
+      "runtimeArgs": [
+        "--remote-debugging-port=9222",
+      ],
       "args": [
         "dist/dev"
       ],
-      "outputCapture": "std",
       "skipFiles": [
         "<node_internals>/**"
       ],
+      "outputCapture": "std"
+    },
+    {
+      "type": "chrome",
+      "request": "attach",
+      "name": "Electron: renderer",
+      "port": 9222,
+      "webRoot": "${workspaceFolder}",
+      "sourceMaps": true,
+      "timeout": 30000,
+    },
+  ],
+  "compounds": [
+    {
+      "name": "Electron: all",
+      "configurations": [
+        "Electron: main",
+        "Electron: renderer",
+      ]
     }
   ]
 }
