--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
     "electron": "^7.1.7",
     "electron-builder": "^21.2.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "3",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
