--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "electron": "^8.2.0",
     "electron-builder": "^21.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "3",
+    "husky": "^4.2.5",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
