--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "electron": "^9.1.2",
-    "electron-builder": "^21.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "css-loader": "^4.2.2",
+    "electron": "9",
+    "electron-builder": "^22.8.0",
+    "html-webpack-plugin": "^4.4.1",
     "husky": "^4.2.5",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.4",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.1",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-obfuscator": "^0.21.0"
+    "webpack-node-externals": "^2.5.2",
+    "webpack-obfuscator": "^1.12.0"
   },
   "husky": {
     "hooks": {
