--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^4.2.2",
-    "electron": "9",
+    "electron": "^10.1.3",
     "electron-builder": "^22.8.0",
     "html-webpack-plugin": "^4.4.1",
     "husky": "^4.3.0",
