--- a/package.json
+++ b/package.json
@@ -22,26 +22,26 @@
   "author": "Kaz NAGAMINE",
   "license": "MIT",
   "dependencies": {
-    "electron-store": "^6.0.0"
+    "electron-store": "^8.0.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^6.1.0",
-    "css-loader": "^4.2.2",
-    "electron": "11",
-    "electron-builder": "^22.8.0",
-    "html-webpack-plugin": "^4.4.1",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^5.2.6",
+    "electron": "^13.1.6",
+    "electron-builder": "^22.11.7",
+    "html-webpack-plugin": "^5.3.2",
     "husky": "^4.3.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "rimraf": "^3.0.2",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^5.1.3",
-    "webpack-node-externals": "^2.5.2",
-    "webpack-obfuscator": "^2.1.0"
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.0.0",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-obfuscator": "2.1.0"
   },
   "husky": {
     "hooks": {
