--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "electron-builder": "^22.11.7",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^4.3.0",
+    "javascript-obfuscator": "^2.15.5",
     "node-sass": "^6.0.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.1.0",
@@ -41,7 +42,7 @@
     "webpack-cli": "^4.7.2",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0",
-    "webpack-obfuscator": "2.1.0"
+    "webpack-obfuscator": "^3.3.2"
   },
   "husky": {
     "hooks": {
