--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
     "javascript-obfuscator": "^2.15.5",
-    "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.75.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.1.0",
     "ts-loader": "^9.2.3",
