--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
     "javascript-obfuscator": "^2.15.5",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.1.2",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "sass": "^1.75.0",
