--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
-    "electron": "20.3.12",
+    "electron": "^22.3.27",
     "electron-builder": "^22.11.7",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
